fix : 이미지 경로 수정

--- a/03장/03장_객체지향의 사실과 오해_신창호.md
+++ b/03장/03장_객체지향의 사실과 오해_신창호.md
@@ -49,7 +49,7 @@
 
 #### 분류는 추상화를 위한 도구 
  - 결국 개념을 통해 객체를 분류하는 작업은 추상화의 2가지 차원을 모두 사용한다. 
- <img src="../images/abstruct.png" width =40%>
+ <img src="../images/gloom/abstruct.png" width =40%>
  
     
 <br></br>
